--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/theme/blood.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -41,18 +41,23 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>The HTML Presentation Framework</h3>
-					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
-					</p>
+					<h1>0 to ES6</h1>
+					<p>The Catch Up</p>
 				</section>
 
 				<section>
-					<h2>Hello There</h2>
-					<p>
-						reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation will show you examples of what it can do.
-					</p>
+					<h2>Rushaine McBean</h2>
+					<h3> <a href="http://twitter.com/copasetickid">@copasetickid</a></h3>
+					<aside class="notes">Introduce myself, mention twitter handle, that I’m JS &amp; Ruby developer</aside>
+
+				</section>
+
+				<section>
+					<img src="img/WNYC-Logo.svg.png">
+				</section>
+
+				<section>
+					<img src="img/js-logo.png" height="450" width="500">
 				</section>
 
 				<!-- Example of nested vertical slides -->
