Add more notes to missing slides

--- a/index.html
+++ b/index.html
@@ -55,24 +55,42 @@
 
 				<section>
 					<img src="img/mjs-logo2.png" height="600" width="800">
+					<aside class="notes">
+						I’m one of the co-organizer’s of the brother meetup to brooklyn.js & the latest meetup to hit Manhattan; It’s called Manhattan.js
+					</aside>
 				</section>
 
 				<section id="job-title">
 					<img src="img/WNYC-Logo.svg.png">
+					<aside class="notes">
+						I’m a JavaScript Engineer on the digital team at WNYC radio where I work on the main website. WNYC is known for being one of the oldest radio stations and several popular podcasts such as “Radio lab”, “this American life” and “The Brian Lehr show”
+					</aside>
 				</section>
 
 				<section>
 					<img src="img/js-logo.png" height="600" width="800">
+					<aside class="notes">
+						Focus on a few features from ES6 that you can dive into today
+					</aside>
 				</section>
 
 				<section>
 					<img src="img/NTsOF.jpg" height="550" width="900">
+					<aside class="notes">
+						Know what’s to be at work and feel like either one of these guys when it comes the client side JS their writing and / or maintaining; I want to be like the cool kids like in the Echosmith song so let’s take it back
+					</aside>
 				</section>
 
-				
+				<section>
+					<img src="img/z-beach.jpg" height="600" width="700">
+					<aside>or like Lady Zahra who brings coffee to the beach and uses ES6 at Bustle</aside>
+				</section>
 
 				<section>
 					<img src="img/Back-to-the-future-title-still.jpg" height="600" width="800">
+					<aside class="notes">
+						Back to the future say so if you’re stuck in 1999 JavaScript we’re about to hop into that Dorlean in bring it back to 2015
+					</aside>
 				</section>
 
 				<section>
@@ -83,9 +101,6 @@
 				<section>
 					<h2>YOLO</h2>
 					<img src="img/drake.jpg" height="500" width="700">
-					<audio loop=true autoplay="autoplay" controls="controls" >
-						<source="https://s3.amazonaws.com/rushainemcbean.com/music/the-motto-hook.mp3" />
-					</audio>
 					<aside class="notes">
 						As the 6 God likes to put it “YOLO” You only live once and sometimes you may only get to write it once to start now but now, now after this talk
 					</aside>
@@ -93,10 +108,14 @@
 
 				<section>
 					<img src="img/where-to-start.jpg" height="500" width="700">
+					<aside class="notes">
+						So you’re probably think that’s all great, everyone likes to play with new stuff  but logically Where do I start? There’s so many new features especially in an app that’s a few years old
+					</aside>
 				</section>
 
 				<section>
 					<h2><span class="topic-headline">Defining Variables</span></h2>
+					<aside class="notes">Intro the first section of the talk</aside>
 				</section>
 
 				<section>
@@ -273,16 +292,15 @@ console.log(capitalizeEachWord('so far gone')); //So Far Gone
 						<q>So Necessary to Automate</q>
 						<aside class="notes">
 							For development watching a certain set of files depending on the app size and then when it’s time to go live it should be all about minification for your production scripts so that I’m always
+
+							Using tools like Grunt, Gulp to help with your build process
 						</aside>
 					</section>
 				</section>
 
 				<section>
 					<img src="img/flash.jpg" height="600" width="800">
-				</section>
-
-				<section>
-					<img src="img/z-beach.jpg" height="600" width="700">
+					<aside class="notes">keeping it update and bring my code into the future</aside>
 				</section>
 
 				<section>
